--- a/index.html
+++ b/index.html
@@ -81,6 +81,114 @@
       }
     </code>
 
+    <h2>chain</h2>
+    <h3>create</h3>
+    <p>Create a chain. It accepts POST method only. An administrator user must log in before chain is created. The backend validates before creating a new chain.</p>
+    <p><code>POST <a href="#">/chain/create</a></code></p>
+    <p>Sample output:</p>
+    <code>
+      {
+          "code": 0,
+          "data": null,
+          "message": "success",
+          "timestamp": "2020-05-15 04:05:11 UTC+0"
+      }
+    </code>
+    <p>Test:</p>
+    <form action="chain/create/" method="POST" target="_blank">
+      <div class="form-group">
+        <label for="name">name</label>
+        <input type="text" class="form-control" id="name" name="name">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <h3>list</h3>
+    <p>List all the chains stored in database.</p>
+    <p><code>GET <a href="chain/list" target="_blank">/chain/list</a></code></p>
+    <p>Sample output:</p>
+    <code>
+      {
+          "code": 0,
+          "data": [
+              {
+                  "id": 1,
+                  "user_id": 2,
+                  "name": "Mings Hotel Chain Version 2"
+              },
+              {
+                  "id": 2,
+                  "user_id": 6,
+                  "name": "Marriott Hotel Systems"
+              },
+              {
+                  "id": 5,
+                  "user_id": 7,
+                  "name": "Hotels by Hilton"
+              }
+          ],
+          "message": "success",
+          "timestamp": "2020-05-21 11:05:41 UTC+0"
+      }
+    </code>
+
+    <h2>hotel</h2>
+    <h3>create</h3>
+    <p>Create a hotel. It accepts POST method only. An administrator user must log in before hotel is created. The backend validates before creating a new hotel.</p>
+    <p><code>POST <a href="#">/hotel/create</a></code></p>
+    <p>Sample output:</p>
+    <code>
+      {
+          "code": 0,
+          "data": null,
+          "message": "success",
+          "timestamp": "2020-05-15 04:05:11 UTC+0"
+      }
+    </code>
+    <p>Test:</p>
+    <form action="hotel/create/" method="POST" target="_blank">
+      <div class="form-group">
+        <label for="name">name</label>
+        <input type="text" class="form-control" id="name" name="name">
+      </div>
+      <div class="form-group">
+        <label for="name">grid_i (0<= i <= 100)</label>
+        <input type="number" class="form-control" id="grid_i" name="grid_i" min="0" max="100">
+      </div>
+      <div class="form-group">
+        <label for="name">grid_j (0<= i <= 100)</label>
+        <input type="number" class="form-control" id="grid_j" name="grid_j" min="0" max="100">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <h3>list</h3>
+    <p>List all the hotels stored in database.</p>
+    <p><code>GET <a href="hotel/list" target="_blank">/hotel/list</a></code></p>
+    <p>Sample output:</p>
+    <code>
+      {
+          "code": 0,
+          "data": [
+              {
+                  "id": 1,
+                  "user_id": 2,
+                  "name": "Mings Hotel Chain Version 2"
+              },
+              {
+                  "id": 2,
+                  "user_id": 6,
+                  "name": "Marriott Hotel Systems"
+              },
+              {
+                  "id": 5,
+                  "user_id": 7,
+                  "name": "Hotels by Hilton"
+              }
+          ],
+          "message": "success",
+          "timestamp": "2020-05-21 11:05:41 UTC+0"
+      }
+    </code>
+
     <h2>user</h2>
     <h3>create</h3>
     <p>Create a user. It accepts POST method only. Specify role with either `customer` or `administrator`. The backend validates before creating a new user.</p>
