Update Hotel List

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <input type="number" class="form-control" id="grid_i" name="grid_i" min="0" max="100">
       </div>
       <div class="form-group">
-        <label for="name">grid_j (0<= i <= 100)</label>
+        <label for="name">grid_j (0<= j <= 100)</label>
         <input type="number" class="form-control" id="grid_j" name="grid_j" min="0" max="100">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
@@ -169,23 +169,41 @@
           "code": 0,
           "data": [
               {
-                  "id": 1,
-                  "user_id": 2,
-                  "name": "Mings Hotel Chain Version 2"
+                  "id": 4,
+                  "chain_id": 2,
+                  "name": "New York Marriott Downtown",
+                  "chain_name": "Marriott Hotel Systems",
+                  "grid_i": 82,
+                  "grid_j": 37,
+                  "created": "2020-05-23 00:55:27",
+                  "user_agent": "Mozilla\/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/83.0.4103.61 Safari\/537.36",
+                  "ip_address": "66.155.225.131"
               },
               {
                   "id": 2,
-                  "user_id": 6,
-                  "name": "Marriott Hotel Systems"
+                  "chain_id": 5,
+                  "name": "New York Hilton Midtown",
+                  "chain_name": "Hotels by Hilton",
+                  "grid_i": 37,
+                  "grid_j": 48,
+                  "created": "2020-05-22 01:59:27",
+                  "user_agent": "Mozilla\/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/83.0.4103.56 Safari\/537.36",
+                  "ip_address": "207.38.249.109"
               },
               {
-                  "id": 5,
-                  "user_id": 7,
-                  "name": "Hotels by Hilton"
+                  "id": 3,
+                  "chain_id": 5,
+                  "name": "Hilton Hotel New York Times Square West",
+                  "chain_name": "Hotels by Hilton",
+                  "grid_i": 21,
+                  "grid_j": 45,
+                  "created": "2020-05-22 02:00:26",
+                  "user_agent": "Mozilla\/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit\/537.36 (KHTML, like Gecko) Chrome\/83.0.4103.56 Safari\/537.36",
+                  "ip_address": "207.38.249.109"
               }
           ],
           "message": "success",
-          "timestamp": "2020-05-21 11:05:41 UTC+0"
+          "timestamp": "2020-05-23 01:05:25 UTC+0"
       }
     </code>
 
